   directmedia (directrtp) and directrtpsetup (earlydirect)

 * ChannelUpdate events now contain a CallRef header.


chan_sip
------------------
 * Asterisk will no longer substitute CID number for CID name in the display
   name field if CID number exists without a CID name. This change improves
   compatibility with certain device features such as Avaya IP500's directory
   lookup service.

 * A new setting for autocreatepeer (autocreatepeer=persistent) allows peers
   created using that setting to not be removed during SIP reload.

 * Added settings recordonfeature and recordofffeature.  When receiving an INFO
   request with a "Record:" header, this will turn the requested feature on/off.
   Allowed values are 'automon', 'automixmon', and blank to disable.  Note that
   dynamic features must be enabled and configured properly on the requesting
   channel for this to function properly.

 * Add support to realtime for the 'callbackextension' option.

 * When multiple peers exist with the same address, but differing
   callbackextension options, incoming requests that are matched by address
   will be matched to the peer with the matching callbackextension if it is
   available.

 * Two new NAT options, auto_force_rport and auto_comedia, have been added
   which set the force_rport and comedia options automatically if Asterisk
   detects that an incoming SIP request crossed a NAT after being sent by
   the remote endpoint.

 * NAT settings are now a combinable list of options. The equivalent of the
   deprecated nat=yes is nat=force_rport,comedia. nat=no behaves as before.

 * Adds an option send_diversion which can be disabled to prevent
   diversion headers from automatically being added to INVITE requests.

 * Add support for lightweight NAT keepalive. If enabled a blank packet will
   be sent to the remote host at a given interval to keep the NAT mapping open.
   This can be enabled using the keepalive configuration option.
